--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
-<p>hi</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>beamr.net - Domain for Sale</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+        .glow {
+            text-shadow: 0 0 15px rgba(255, 255, 255, 0.8);
+        }
+    </style>
+</head>
+<body class="bg-gradient-to-br from-gray-900 to-black text-gray-100 flex flex-col items-center justify-center min-h-screen text-center px-6">
+    <h1 class="text-8xl font-black text-white tracking-wide mb-6 glow">beamr.net</h1>
+    <p class="text-gray-300 text-2xl mb-8 max-w-2xl leading-relaxed">. beamr.net is for sale on Namecheap. Get it now!</p>
+    
+    <a href="https://www.namecheap.com/domains/registration/results/?domain=beamr.net" 
+       class="bg-gradient-to-r from-blue-500 to-teal-500 text-white px-16 py-5 rounded-full text-2xl font-semibold shadow-xl hover:shadow-2xl hover:from-blue-600 hover:to-teal-600 transition-all duration-300 transform hover:scale-110">
+        Secure This Domain
+    </a>
+    
+    <p class="text-gray-500 mt-6 text-lg italic">Limited availability – secure your brand today.</p>
+</body>
+</html>
