--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 </head>
 <body class="bg-gradient-to-br from-gray-900 to-black text-gray-100 flex flex-col items-center justify-center min-h-screen text-center px-6">
     <h1 class="text-8xl font-black text-white tracking-wide mb-6 glow">beamr.net</h1>
-    <p class="text-gray-300 text-2xl mb-8 max-w-2xl leading-relaxed">. beamr.net is for sale on Namecheap. Get it now!</p>
+    <p class="text-gray-300 text-2xl mb-8 max-w-2xl leading-relaxed">beamr.net is for sale on Namecheap. Get it now!</p>
     
     <a href="https://www.namecheap.com/domains/registration/results/?domain=beamr.net" 
-       class="bg-gradient-to-r from-blue-500 to-teal-500 text-white px-16 py-5 rounded-full text-2xl font-semibold shadow-xl hover:shadow-2xl hover:from-blue-600 hover:to-teal-600 transition-all duration-300 transform hover:scale-110">
+       class="bg-gradient-to-r from-indigo-500 to-purple-500 text-white px-16 py-5 rounded-2xl text-2xl font-semibold shadow-xl hover:shadow-2xl hover:from-blue-600 hover:to-teal-600 transition-all duration-300 transform hover:scale-110">
         Secure This Domain
     </a>
     
