--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <p class="text-gray-300 text-2xl mb-8 max-w-2xl leading-relaxed">beamr.net is for sale on Namecheap. Get it now!</p>
     
     <a href="https://www.namecheap.com/domains/registration/results/?domain=beamr.net" 
-       class="bg-gradient-to-r from-indigo-500 to-purple-500 text-white px-16 py-5 rounded-2xl text-2xl font-semibold shadow-xl hover:shadow-2xl hover:from-blue-600 hover:to-teal-600 transition-all duration-300 transform hover:scale-110">
+       class="bg-gradient-to-r from-indigo-500 to-purple-500 text-white px-16 py-5 rounded-2xl text-2xl font-semibold shadow-xl hover:shadow-2xl hover:from-purple-600 hover:to-indigo-600 transition-all duration-300 transform hover:scale-110">
         Secure This Domain
     </a>
     
