--- a/index.html
+++ b/index.html
@@ -11,15 +11,16 @@
         }
     </style>
 </head>
-<body class="bg-gradient-to-br from-gray-900 to-black text-gray-100 flex flex-col items-center justify-center min-h-screen text-center px-6">
-    <h1 class="text-8xl font-black text-white tracking-wide mb-6 glow">beamr.net</h1>
-    <p class="text-gray-300 text-2xl mb-8 max-w-2xl leading-relaxed">beamr.net is for sale on Namecheap. Get it now!</p>
+<body class="bg-gradient-to-br from-gray-900 to-black text-gray-100 flex flex-col items-center justify-center min-h-screen text-center px-4 sm:px-6 lg:px-8">
+    <h1 class="text-5xl sm:text-6xl md:text-7xl lg:text-8xl font-black text-white tracking-wide mb-4 sm:mb-6 glow">beamr.net</h1>
+    <p class="text-gray-300 text-lg sm:text-xl md:text-2xl mb-6 sm:mb-8 max-w-2xl leading-relaxed">beamr.net is for sale on Namecheap. Get it now!</p>
     
     <a href="https://www.namecheap.com/domains/registration/results/?domain=beamr.net" 
-       class="bg-gradient-to-r from-indigo-500 to-purple-500 text-white px-16 py-5 rounded-2xl text-2xl font-semibold shadow-xl hover:shadow-2xl hover:from-purple-600 hover:to-indigo-600 transition-all duration-300 transform hover:scale-110">
+       class="bg-gradient-to-r from-indigo-500 to-purple-500 text-white px-8 sm:px-12 md:px-16 py-3 sm:py-4 md:py-5 rounded-xl sm:rounded-2xl text-lg sm:text-xl md:text-2xl font-semibold shadow-xl hover:shadow-2xl hover:from-purple-600 hover:to-indigo-600 transition-all duration-300 transform hover:scale-105">
         Secure This Domain
     </a>
     
-    <p class="text-gray-500 mt-6 text-lg italic">Limited availability – secure your brand today.</p>
+    <p class="text-gray-500 mt-4 sm:mt-6 text-sm sm:text-lg italic">Limited availability – secure your brand today.</p>
 </body>
 </html>
+
