--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
         
         <div class="mb-8">
             <p class="text-lg text-slate-300 mb-4">
-                Strategic domain asset available for acquisition
+                Premium domain asset available for acquisition
             </p>
             <p class="text-slate-400 text-sm uppercase tracking-wide">
-                Currently listed on premium marketplaces
+                Currently listed on the Namecheap marketplace
             </p>
         </div>
 
@@ -31,11 +31,7 @@
                 <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true"><path d="M11.978 4.908c.815-.479 1.411-.757 2.064-.757 1.037 0 1.724.523 1.724 1.506 0 .815-.462 1.45-1.155 1.892-.757.479-1.68.815-2.945 1.45-1.155.571-1.985 1.155-2.601 1.985-.572.815-.9 1.793-.9 2.945 0 2.064 1.411 3.475 3.399 3.475 1.237 0 2.315-.353 3.4-1.012l-.436 2.191c-.815.353-1.68.606-2.601.606-2.778 0-4.67-1.705-4.67-4.326 0-1.411.462-2.601 1.294-3.514.757-.815 1.793-1.382 3.213-1.965 1.294-.55 2.156-.9 2.727-1.237.55-.33.9-.7 1.067-1.115.188-.436.272-.9.272-1.382 0-1.294-.9-2.156-2.281-2.156-.815 0-1.68.242-2.727.7l.436-2.156h-2.945l-1.45 7.164c-.188.9-.33 1.68-.33 2.315 0 .9.188 1.68.55 2.315H4.544c-.088-.353-.132-.7-.132-1.115 0-2.945 2.036-5.708 5.148-6.773l-1.45 7.164h2.191l1.45-7.164z"/></svg>
                 Purchase via Namecheap
             </a>
-            <a href="https://www.godaddy.com/domainsearch/find?domainToCheck=beamr.net" 
-               class="bg-slate-800 hover:bg-slate-700 text-white px-8 py-3 rounded-lg font-medium transition-colors duration-200 border border-slate-700 flex items-center justify-center gap-2">
-                <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24"><path d="M17.944 5.97a6.343 6.343 0 0 0-2.133-.352c-1.682 0-2.721.75-2.721 2.063 0 1.182.888 1.833 2.393 2.174 1.879.426 2.879 1.206 2.879 2.761 0 1.915-1.616 3.069-4.079 3.069a8.847 8.847 0 0 1-3.354-.605l.352-1.675c.809.312 1.68.528 2.625.528 1.466 0 2.389-.51 2.389-1.466 0-.839-.605-1.363-2.045-1.702-1.84-.426-2.879-1.134-2.879-2.643 0-1.652 1.311-2.761 3.516-2.761a7.17 7.17 0 0 1 2.271.375l-.328 1.65zm4.943 7.002c0-3.258-2.271-5.55-5.55-5.55-3.258 0-5.55 2.292-5.55 5.55 0 3.235 2.292 5.55 5.55 5.55 3.259 0 5.55-2.315 5.55-5.55zm-2.133.023c0 2.109-1.335 3.586-3.422 3.586-2.085 0-3.42-1.477-3.42-3.586 0-2.109 1.335-3.586 3.42-3.586 2.087 0 3.422 1.477 3.422 3.586z"/></svg>
-                Acquire via GoDaddy
-            </a>
+        
         </div>
 
         <div class="text-slate-400 text-sm space-y-2 mb-8">
